--- a/PizzaStore.csproj
+++ b/PizzaStore.csproj
@@ -71,7 +71,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Services\" />
+    <Folder Include="Application\DTOs\" />
     <Folder Include="Presentation\ViewModels\" />
   </ItemGroup>
 
